--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -15,7 +15,6 @@ body {
 table {
   width: 800px;
   border-right-color: #ffffff;
-  margin-top: 100px;
   font-size: 18px;
   /* /* border: 1px solid #343a40; */
   border-collapse: collapse;
@@ -47,12 +46,35 @@ tbody tr:nth-child(even) {
   background-color: transparent;
   padding: 5px 10px;
   border-radius: 5px;
+  cursor: pointer;
+  border: 1px solid #222;
+}
+.btn-danger {
   background-color: rgb(255, 77, 77);
   color: #fff;
-  cursor: pointer;
+  border-color: rgb(255, 77, 77);
 }
 
 .item span {
   background-color: yellow;
   color: #000;
+}
+.home {
+  margin-top: 100px;
+}
+.home__nav {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 5px;
+}
+.home__nav input,
+select {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  padding: 5px 10px;
+  border: 1px solid #eee;
+}
+.home__nav button {
+  margin-left: 8px;
 }
